
2021-10-30  Ron Norman <rjn@inglenet.com>

	* parser.y: For ASSIGN PRINTER or PRINTER-1 set file type to 
				LINE ADVANCING

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y, pplex.l, scanner.l: implementation of COBOL-WORDS directive

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_file_initialization): don't generate attribute
	  setting which is done in cob_file_malloc / cob_file_external_addr

2021-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_generic_register): handle CONSTANT
	* error.c (ambiguous_error): handling for internal definitions / registers
	* typeck.c (cb_build_generic_register), tree.h: optionally return
	  cob_field for register
	* cobc.c, cobc.h, reserved.c: code for ancient OSVS registers - disabled

2021-09-25  Ron Norman <rjn@inglenet.com>

	* cobc.c: Defer processing of -std= as much as possible. Needed to
			be able to insert -std=default for test cases even if
			the compiler was built with a differente default
	* flag.def, cobc.c: Add -ffile-format= mf | gc 
			Defines default file format for Sequential/Relative files
			(This obsoletes -fmf-files which could be removed later)

2021-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: fixed bug #764, where deleting a reserved word which
	  shares the same hash as another word could make the other word
	  inaccessible in the reserve word table.

2021-09-12  Ron Norman <rjn@inglenet.com>

	* codegen.c: If -fmf-files, then set mod->flag_file_format = COB_FILE_IS_MF
	* reserved.c (cb_list_reserved): specify DEBUG-ITEM variables as
	  implemented if defined as register

2021-09-02  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c (cb_toupper): extracted and used in different places
	* reserved.c (cb_strncpy_upper), tree.h: renamed + exported function
	* scanner.l (copy_word_in_quotes, copy_two_words_in_quotes): internally
	  upper-case when handling reserved word adjustment